@startuml
!include ./config.txt
title serviceパッケージ
package service{
    interface ProductService{
        + {abstract} findAll() : List<Product>
        + {abstract} findByCategoryId(int productCategoryId) : List<Product>
        + {abstract} findById(Integer id) : Product
        + {abstract} insert(Product product) : void
        + {abstract} update(Product product) : void
        + {abstract} delete(Integer id) : void
    }
    class ProductServiceImpl{
        + findAll() : List<Product>
        + findByCategoryId(int productCategoryId) : List<Product>
        + findById(Integer id) : Product
        + insert(Product product) : void
        + update(Product product) : void
        + delete(Integer id) : void
    }

    interface ProductCategoryService{
        + {abstract} findAll() : List<ProductCategory>
        + {abstract} findById(Integer id) : ProductCategory
        + {abstract} insert(ProductCategory productCategory) : void
    }
    class ProductCategoryServiceImpl{
        + findAll() : List<ProductCategory>
        + findById(Integer id) : ProductCategory
        + insert(ProductCategory productCategory) : void
    }


    interface EmployeeAccountService{
        + {abstract} findAll() : List<EmployeeAccount>
        + {abstract} findById(Integer id) : EmployeeAccount
        + {abstract} isExist(String userName) : boolean
        + {abstract} insert(EmployeeAccount employeeAccount) : void
    }
    class EmployeeAccountServiceImpl{
        + findAll() : List<EmployeeAccount>
        + findById(Integer id) : EmployeeAccount
        + isExist(String userName) : boolean
        + insert(EmployeeAccount employeeAccount) : void
    }
    interface EmployeeService{
        + {abstract} findAll() : List<Employee>
    }
    class EmployeeServiceImpl{
         + findAll() : List<Employee>
    }
    interface CustomerService{
        + {abstract} registerCustomer() : void
    }
    class CustomerServiceImpl{
        + registerCustomer() : void
    }
    interface OrderService{
        + {abstract} addOrder() : void
        + {abstract} updateOrderStatus() : void
    }
    class OrderServiceImpl{
        + addOrder() : void
        + updateOrderStatus() : void
    }
}

EmployeeAccountService <|.. EmployeeAccountServiceImpl
EmployeeService <|.. EmployeeServiceImpl
ProductService <|.. ProductServiceImpl
ProductCategoryService <|.. ProductCategoryServiceImpl
CustomerService <|.. CustomerServiceImpl
OrderService <|.. OrderServiceImpl
@enduml